--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,9 +1,9 @@
-name: Merge IPTV
+name: Smart Merge IPTV
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */6 * * *"   # har 6 ghante (safe)
+    - cron: "*/15 * * * *"   # SAFE cron (GitHub friendly)
 
 permissions:
   contents: write
@@ -15,29 +15,44 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # -------- Download Hotstar M3U --------
-      - name: Download ztv.m3u
+      # -------- Download all playlists --------
+      - name: Download sources
         run: |
-          curl -L "https://livetv-cb7.pages.dev/hotstar" -o ztv.m3u
+          curl -sL "https://livetv-cb7.pages.dev/hotstar" -o ztv.m3u
+          curl -sL "https://raw.githubusercontent.com/cloudplay97/m3u/refs/heads/main/sony.m3u" -o sony.m3u
+          curl -sL "https://raw.githubusercontent.com/drmlive/sliv-live-events/main/sonyliv.m3u" -o sonyliv.m3u
+          curl -sL "https://raw.githubusercontent.com/drmlive/fancode-live-events/main/fancode.m3u" -o fancode.m3u
 
-      # -------- Download Sony playlist --------
-      - name: Download sony.m3u
+      # -------- Merge --------
+      - name: Build merged playlist
         run: |
-          curl -L "https://raw.githubusercontent.com/cloudplay97/m3u/refs/heads/main/sony.m3u" -o sony.m3u
+          echo "#EXTM3U" > new_merged.m3u
+          tail -n +2 ztv.m3u >> new_merged.m3u
+          tail -n +2 sony.m3u >> new_merged.m3u
+          tail -n +2 sonyliv.m3u >> new_merged.m3u
+          tail -n +2 fancode.m3u >> new_merged.m3u
 
-      # -------- Merge both --------
-      - name: Merge playlists
+      # -------- Change detection --------
+      - name: Check for changes
+        id: diff
         run: |
-          echo "#EXTM3U" > merged.m3u
-          tail -n +2 ztv.m3u >> merged.m3u
-          tail -n +2 sony.m3u >> merged.m3u
+          if [ -f merged.m3u ] && cmp -s merged.m3u new_merged.m3u; then
+            echo "changed=false" >> $GITHUB_OUTPUT
+          else
+            echo "changed=true" >> $GITHUB_OUTPUT
+          fi
 
-      # -------- Commit --------
-      - name: Commit merged.m3u
+      # -------- Replace only if changed --------
+      - name: Update merged.m3u
+        if: steps.diff.outputs.changed == 'true'
+        run: mv new_merged.m3u merged.m3u
+
+      # -------- Commit only if changed --------
+      - name: Commit update
+        if: steps.diff.outputs.changed == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add merged.m3u
-          git diff --cached --quiet && exit 0
-          git commit -m "Auto update merged IPTV"
+          git commit -m "Smart auto update IPTV"
           git push
