--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: Smart Merge IPTV
 on:
   workflow_dispatch:
   schedule:
-    - cron: "*/15 * * * *"   # GitHub-safe smart refresh
+    - cron: "*/15 * * * *"
 
 permissions:
   contents: write
@@ -15,60 +15,45 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # -------- Download playlists from secrets --------
+      # -------- Download playlists --------
       - name: Download playlists
         run: |
-          curl -sL "${{ secrets.SRC1 }}" -o ztv.m3u
-          curl -sL "${{ secrets.SRC2 }}" -o sony.m3u
-          curl -sL "${{ secrets.SRC3 }}" -o sonyliv.m3u
-          curl -sL "${{ secrets.SRC4 }}" -o fancode.m3u
+          curl -sL "${{ secrets.SRC1 }}" -o 1.m3u
+          curl -sL "${{ secrets.SRC2 }}" -o 2.m3u
+          curl -sL "${{ secrets.SRC3 }}" -o 3.m3u
+          curl -sL "${{ secrets.SRC4 }}" -o 4.m3u
 
-      # -------- Build merged playlist (TiviMate safe) --------
+      # -------- Clean + Merge (TiviMate safe) --------
       - name: Build merged playlist
         run: |
-          echo "#EXTM3U" > new_merged.m3u
+          echo "#EXTM3U" > new.m3u
 
-          # SRC1 clean append (remove header)
-          sed '1{/^#EXTM3U/d}' ztv.m3u >> new_merged.m3u
+          for f in 1.m3u 2.m3u 3.m3u 4.m3u; do
+            # remove header + Windows line endings + blank lines
+            sed '1{/^#EXTM3U/d}; s/\r$//; /^$/d' "$f" >> new.m3u
+          done
 
-          # SRC2 → force group-title="Sonyliv" safely
-          awk '
-          /^#EXTM3U/ {next}
-          /^#EXTINF/ {
-            line=$0
-            if (line !~ /group-title=/)
-              sub(/#EXTINF:-1/, "#EXTINF:-1 group-title=\"Sonyliv\"", line)
-            print line
-            next
-          }
-          { print }
-          ' sony.m3u >> new_merged.m3u
-
-          # SRC3 & SRC4 clean append
-          sed '1{/^#EXTM3U/d}' sonyliv.m3u >> new_merged.m3u
-          sed '1{/^#EXTM3U/d}' fancode.m3u >> new_merged.m3u
-
-      # -------- Detect change --------
-      - name: Check for changes
+      # -------- Change detection --------
+      - name: Check changes
         id: diff
         run: |
-          if [ -f merged.m3u ] && cmp -s merged.m3u new_merged.m3u; then
+          if [ -f merged.m3u ] && cmp -s merged.m3u new.m3u; then
             echo "changed=false" >> $GITHUB_OUTPUT
           else
             echo "changed=true" >> $GITHUB_OUTPUT
           fi
 
       # -------- Replace only if changed --------
-      - name: Update merged.m3u
+      - name: Update file
         if: steps.diff.outputs.changed == 'true'
-        run: mv new_merged.m3u merged.m3u
+        run: mv new.m3u merged.m3u
 
       # -------- Commit only if changed --------
-      - name: Commit update
+      - name: Commit
         if: steps.diff.outputs.changed == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add merged.m3u
-          git commit -m "Smart auto update IPTV (TiviMate safe + Sonyliv group)"
+          git commit -m "Auto update merged IPTV (clean TiviMate safe)"
           git push
