--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Smart Merge IPTV
+name: Dual IPTV Build
 
 on:
   workflow_dispatch:
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # -------- Download playlists --------
+      # -------- Download hidden sources --------
       - name: Download playlists
         run: |
           curl -sL "${{ secrets.SRC1 }}" -o 1.m3u
@@ -23,37 +23,36 @@ jobs:
           curl -sL "${{ secrets.SRC3 }}" -o 3.m3u
           curl -sL "${{ secrets.SRC4 }}" -o 4.m3u
 
-      # -------- Clean + Merge (TiviMate safe) --------
-      - name: Build merged playlist
+      # -------- Merge raw --------
+      - name: Merge raw
         run: |
-          echo "#EXTM3U" > new.m3u
-
+          echo "#EXTM3U" > all.m3u
           for f in 1.m3u 2.m3u 3.m3u 4.m3u; do
-            # remove header + Windows line endings + blank lines
-            sed '1{/^#EXTM3U/d}; s/\r$//; /^$/d' "$f" >> new.m3u
+            sed '1{/^#EXTM3U/d}; s/\r$//; /^$/d' "$f" >> all.m3u
           done
 
-      # -------- Change detection --------
-      - name: Check changes
-        id: diff
+      # -------- Build Tivimate-only (non-DRM HLS) --------
+      - name: Build tivimate.m3u
         run: |
-          if [ -f merged.m3u ] && cmp -s merged.m3u new.m3u; then
-            echo "changed=false" >> $GITHUB_OUTPUT
-          else
-            echo "changed=true" >> $GITHUB_OUTPUT
-          fi
+          echo "#EXTM3U" > tivimate.m3u
+          awk '
+          /#EXTINF/ {info=$0; getline url}
+          url ~ /\.m3u8/ && info !~ /KODIPROP|license|cookie/ {
+            print info
+            print url
+          }' all.m3u >> tivimate.m3u
 
-      # -------- Replace only if changed --------
-      - name: Update file
-        if: steps.diff.outputs.changed == 'true'
-        run: mv new.m3u merged.m3u
+      # -------- Build OTT full playlist --------
+      - name: Build ott.m3u
+        run: |
+          cp all.m3u ott.m3u
 
       # -------- Commit only if changed --------
       - name: Commit
-        if: steps.diff.outputs.changed == 'true'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add merged.m3u
-          git commit -m "Auto update merged IPTV (clean TiviMate safe)"
+          git add tivimate.m3u ott.m3u
+          git diff --cached --quiet && exit 0
+          git commit -m "Auto update dual IPTV playlists"
           git push
