--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,4 +1,4 @@
-name: Build Merged IPTV
+name: Build IPTV
 
 on:
   workflow_dispatch:
@@ -23,14 +23,13 @@ jobs:
           curl -sL "${{ secrets.SRC3 }}" -o 3.m3u
           curl -sL "${{ secrets.SRC4 }}" -o 4.m3u
 
-      # -------- Merge + normalize --------
-      - name: Build merged.m3u
+      # -------- Build Kashmir.m3u --------
+      - name: Build final playlist
         run: |
-          echo "#EXTM3U" > merged.m3u
+          echo "#EXTM3U" > Kashmir.m3u
 
           for f in 1.m3u 2.m3u 3.m3u 4.m3u; do
-            # remove header, CRLF, blank lines
-            sed '1{/^#EXTM3U/d}; s/\r$//; /^$/d' "$f" >> merged.m3u
+            sed '1{/^#EXTM3U/d}; s/\r$//; /^$/d' "$f" >> Kashmir.m3u
           done
 
       # -------- Remove duplicate clearkey lines --------
@@ -44,15 +43,15 @@ jobs:
             print
             prev = $0
           }
-          ' merged.m3u > cleaned.m3u
-          mv cleaned.m3u merged.m3u
+          ' Kashmir.m3u > cleaned.m3u
+          mv cleaned.m3u Kashmir.m3u
 
       # -------- Commit only if changed --------
-      - name: Commit merged playlist
+      - name: Commit playlist
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add merged.m3u
+          git add Kashmir.m3u
           git diff --cached --quiet && exit 0
-          git commit -m "Auto update merged IPTV (single universal file)"
+          git commit -m "Auto update Kashmir IPTV playlist"
           git push
